# website_audit_tool

./: .gitignore  README.md  pyproject.toml  requirements.txt  vercel.json
api/: index.py
logs/: 20260623T140459Z_www_beacondata_com.json  20260623T140612Z_www_eight25media_com.json  20260623T164432Z_www_eight25media_com.json  20260623T164645Z_jetwingtravels_com.json
scraped/: 20260623T140459Z_www_beacondata_com.json  20260623T140612Z_www_eight25media_com.json  20260623T164431Z_www_eight25media_com.json  20260623T164645Z_jetwingtravels_com.json
src/website_audit_tool/: main.py
src/website_audit_tool/adapters/: github_storage.py  llm_client.py  scraper.py
src/website_audit_tool/core/: models.py
src/website_audit_tool/use_cases/: audit_page.py
src/website_audit_tool/web/: app.py
src/website_audit_tool/web/static/: index.html
tests/: test_models.py  test_scraper.py
